http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: app1-route
spec:
  parentRefs:
    - name: fatec-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/api1"
      backendRefs:
        - name: backend-omdb-service
          namespace: production
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/api2"
      backendRefs:
        - name: backend-poke-service
          namespace: production
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: vue-frontend-service
          namespace: production
          port: 80
